modify the meta tag in index.html and calednder bottons

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,8 @@
     <meta name="description" content="SkillLink Platform: is an  innovative skill exchange platform designed to empower individuals to connect, 
     learn, and grow. The platform allows users to showcase their expertise, 
     find compatible skill partners, and engage in mutual learning experiences." />
-    <meta name="author" content="skillLink" />
+    <meta name="authors" content="Front-End (Mohammed Refaat, Mohamed Salem), Back-End (Ezzeldin Morgan, Mohamed Wahed)"/>
+    <meta name="description" content="skillLink" />
   </head>
 
   <body>
